# simple-url-router

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: admin.py  auth.py  config.py  database.py  main.py  models.py  templates.py
app/routes/: admin.py  redirect.py
app/templates/: 404.html  admin.html  admin_import.html  admin_list.html  base.html  login.html
tests/: conftest.py  test_admin.py  test_auth.py  test_models.py  test_redirect.py
